Fix scrollbars on devtools panel

--- a/src/devtools/panel.scss
+++ b/src/devtools/panel.scss
@@ -1,21 +1,27 @@
 @import "../assets/styles/base";
 
+html, body {
+  height: 100%;
+}
 body {
   font-size: 15px;
   margin: 0 auto;
   color: $body-font-color;
   background-color: $body-background-color;
   padding-top: 37px;
+  overflow: hidden;
 }
-nav.navbar {
+body > header, nav.navbar {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
+  height: 37px;
+}
+nav.navbar {
   background: #fff;
   border-bottom: 1px solid $border-color;
 }
-
 .navbar-section:last-of-type a.btn {
   border-left: 1px solid #eee;
 }
@@ -24,6 +30,11 @@ nav.navbar .btn.btn-link {
 }
 nav.navbar .btn.btn-link:hover {
   color: $primary-color-dark;
+}
+body > main {
+  height: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 .request {
   width: 100%;
